[package]
name = "metrics_exporter"
version = "0.0.1"
edition = "2021"
authors = ["arqu <asmir@n0.computer>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/metrics_exporter"
description = "iroh metrics exporter"
rust-version = "1.65"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.0.9", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
reqwest = { version = "0.11.10", features = ["rustls-tls"], default-features = false}
names = { version = "0.14.0", default-features = false }
bytes = "1.4.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.7.3"